<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_lock_add_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/base_dimen_250"
        android:src="@drawable/icon_lock_add_finish" />

    <TextView
        android:id="@+id/charmHome_lock_add_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_lock_add_finish"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/base_dimen_54"
        android:text="@string/charmHome_lock_add_finish"
        android:textColor="@color/charm_home_lock_scanning_txt"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_lock_add_finish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_dimen_88"
        android:layout_below="@+id/charmHome_lock_add_finish"
        android:layout_marginLeft="@dimen/base_dimen_146"
        android:layout_marginRight="@dimen/base_dimen_146"
        android:layout_marginTop="@dimen/base_dimen_60"
        android:background="@drawable/shape_lock_scanning_code_btn"
        android:text="@string/charmHome_lock_add_finish_btn"
        android:textColor="@color/charm_home_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lock_add_bottom_tx"
        android:layout_alignLeft="@+id/lock_add_bottom_tx"
        android:text="@string/charm_home_lock_note"
        android:textColor="@color/charm_home_lock_add_bottom_tx"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/lock_add_bottom_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/base_dimen_82"
        android:text="@string/charm_home_lock_add_bottom_tx"
        android:textColor="@color/charm_home_lock_add_bottom_tx"
        android:textSize="12sp" />

</RelativeLayout>