<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lock_device_input_login_tx_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/base_dimen_210"
        android:text="@string/charmHome_lock_device_input_login_tx_one"
        android:textColor="@color/charm_home_lock_scanning_txt"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/lock_device_input_login_tx_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lock_device_input_login_tx_one"
        android:layout_centerHorizontal="true"
        android:text="@string/charmHome_lock_device_input_login_tx_two"
        android:textColor="@color/charm_home_lock_scanning_txt"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/ed_lock_input_login_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lock_device_input_login_tx_two"
        android:layout_marginLeft="@dimen/base_dimen_160"
        android:layout_marginRight="@dimen/base_dimen_160"
        android:layout_marginTop="@dimen/base_dimen_60"
        android:background="@color/white"
        android:drawableLeft="@drawable/icon_lock_input_login_pass"
        android:drawablePadding="@dimen/base_dimen_28"
        android:gravity="center|left"
        android:hint="@string/charmHome_lock_device_input_login_ed_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/charm_home_lock_gray_tx"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tx_input_login_pass_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_dimen_2"
        android:layout_below="@+id/ed_lock_input_login_pass"
        android:layout_marginLeft="@dimen/base_dimen_155"
        android:layout_marginRight="@dimen/base_dimen_155"
        android:layout_marginTop="@dimen/base_dimen_14"
        android:background="#D3D3D3" />

    <TextView
        android:id="@+id/tx_input_login_sure"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_dimen_88"
        android:layout_below="@+id/tx_input_login_pass_line"
        android:layout_marginLeft="@dimen/base_dimen_146"
        android:layout_marginRight="@dimen/base_dimen_146"
        android:layout_marginTop="@dimen/base_dimen_136"
        android:background="@drawable/shape_lock_scanning_code_btn"
        android:gravity="center"
        android:text="@string/charmHome_dialog_input_sure"
        android:textColor="@color/charm_home_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/base_dimen_80"
        android:text="@string/charmHome_lock_device_input_login_bottom"
        android:textColor="#A2A2A2" />
</RelativeLayout>