<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_input_finger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/base_dimen_242"
        android:background="@drawable/icon_lock_input_fingerprint" />

    <TextView
        android:id="@+id/tx_lock_input_finger_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_input_finger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/base_dimen_88"
        android:text="@string/charmHome_lock_device_place_finger"
        android:textColor="@color/charm_home_lock_scanning_txt"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tx_lock_finger_toast_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_lock_input_finger_place"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/base_dimen_56"
        android:text="@string/charmHome_lock_device_input_finger_toast_one"
        android:textColor="@color/charm_home_lock_gray_tx"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tx_lock_finger_toast_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_lock_finger_toast_one"
        android:layout_centerHorizontal="true"
        android:text="@string/charmHome_lock_device_input_finger_toast_two"
        android:textColor="@color/charm_home_lock_gray_tx"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_finger_start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_dimen_88"
        android:layout_below="@+id/tx_lock_finger_toast_two"
        android:layout_marginEnd="@dimen/base_dimen_80"
        android:layout_marginStart="@dimen/base_dimen_80"
        android:layout_marginTop="@dimen/base_dimen_150"
        android:background="@drawable/shape_lock_scanning_code_btn"
        android:gravity="center"
        android:text="@string/charmHome_lock_device_input_finger_btn"
        android:textColor="@color/charm_home_title" />
</RelativeLayout>