<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_root"
    android:background="@drawable/shape_lock_bluetooth_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tx_logout_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/base_dimen_36"
        android:text="@string/charmHome_lock_toast_dialog_logout_title"
        android:textColor="@color/charm_home_lock_scanning_txt"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tx_logout_dialog_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_logout_dialog_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/base_dimen_44"
        android:layout_marginTop="@dimen/base_dimen_32"
        android:text="@string/charmHome_lock_toast_dialog_logout_content"
        android:textColor="@color/charm_home_lock_gray_tx" />

    <TextView
        android:id="@+id/tx_logout_dialog_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_dimen_2"
        android:layout_below="@+id/tx_logout_dialog_content"
        android:background="@color/charm_home_lock_line_gray" />

    <LinearLayout
        android:id="@+id/ll_logout_dialog_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_logout_dialog_line"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tx_logout_dialog_sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/base_dimen_32"
            android:paddingTop="@dimen/base_dimen_26"
            android:text="@string/charmHome_dialog_input_sure"
            android:textColor="@color/charm_home_title" />

        <TextView
            android:layout_width="@dimen/base_dimen_2"
            android:layout_height="match_parent"
            android:layout_below="@+id/tx_logout_dialog_content"
            android:background="@color/charm_home_lock_line_gray" />

        <TextView
            android:id="@+id/tx_logout_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/base_dimen_32"
            android:paddingTop="@dimen/base_dimen_26"
            android:text="@string/charmHome_dialog_input_cancel"
            android:textColor="@color/charm_home_lock_gray_tx" />
    </LinearLayout>

</RelativeLayout>