<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_input_home_name_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tx_input_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/base_dimen_64"
        android:text="@string/charmHome_dialog_input_title"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/ed_input_dialog_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_dimen_80"
        android:layout_below="@+id/tx_input_dialog_title"
        android:layout_marginLeft="@dimen/base_dimen_46"
        android:layout_marginRight="@dimen/base_dimen_46"
        android:layout_marginTop="@dimen/base_dimen_27"
        android:background="@drawable/shape_dialog_input_edit_bg"
        android:gravity="center|left"
        android:hint="@string/charmHome_dialog_input_hint"
        android:paddingLeft="@dimen/base_dimen_32"
        android:textColor="@color/black"
        android:textColorHint="@color/charm_home_input_dialog_hint"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tx_input_dialog_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_dimen_2"
        android:layout_below="@+id/ed_input_dialog_name"
        android:layout_marginTop="@dimen/base_dimen_47"
        android:background="@color/charm_home_input_dialog_line" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_input_dialog_line"
        android:gravity="center"
        android:paddingBottom="@dimen/base_dimen_22"
        android:paddingTop="@dimen/base_dimen_16"
        android:text="@string/charmHome_dialog_input_sure"
        android:textColor="@color/charm_home_them_red"
        android:textSize="16sp" />

</RelativeLayout>