<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_lock_bluetooth_dialog_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_lock_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/base_dimen_46"
        android:layout_marginRight="@dimen/base_dimen_46"
        android:layout_marginTop="@dimen/base_dimen_46"
        android:src="@drawable/icon_lock_bluetooth_one" />

    <TextView
        android:id="@+id/tx_lock_bluetooth_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_lock_bluetooth"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/base_dimen_66"
        android:text="@string/charmHome_lock_dialog_bluetooth_one"
        android:textColor="@color/charm_home_lock_dialog_bluetooth_txt"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/charmHome_lock_dialog_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_lock_bluetooth_one"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/base_dimen_6"
        android:text="@string/charmHome_lock_dialog_bluetooth_two"
        android:textColor="@color/charm_home_lock_dialog_bluetooth_txt"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/charmHome_lock_dialog_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_dimen_2"
        android:layout_below="@+id/charmHome_lock_dialog_two"
        android:layout_marginTop="@dimen/base_dimen_30"
        android:background="@color/charm_home_lock_dialog_bluetooth_txt" />

    <TextView
        android:id="@+id/tx_IKnow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/charmHome_lock_dialog_line"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/base_dimen_32"
        android:paddingTop="@dimen/base_dimen_26"
        android:text="@string/charmHome_lock_dialog_i_know"
        android:textColor="@color/charm_home_title" />


</RelativeLayout>