<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_dimen_20"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/base_dimen_50"
            android:paddingBottom="@dimen/base_dimen_28"
            android:paddingTop="@dimen/base_dimen_28"
            android:text="@string/charmHome_lock_device_name"
            android:textColor="@color/charm_home_lock_scanning_txt" />

        <TextView
            android:id="@+id/tx_lock_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/base_dimen_50"
            android:text="德施曼门锁"
            android:textColor="@color/charm_home_lock_gray_tx" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_dimen_20"
        android:background="@color/white">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/base_dimen_50"
            android:paddingBottom="@dimen/base_dimen_28"
            android:paddingTop="@dimen/base_dimen_28"
            android:text="@string/charmHome_lock_device_version"
            android:textColor="@color/charm_home_lock_scanning_txt" />

        <TextView
            android:id="@+id/tx_lock_device_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/base_dimen_50"
            android:paddingBottom="@dimen/base_dimen_28"
            android:paddingTop="@dimen/base_dimen_28"
            android:text="A0.3.007"
            android:textColor="@color/charm_home_lock_gray_tx" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_dimen_2"
            android:layout_below="@+id/tx_lock_device_version"
            android:layout_marginLeft="@dimen/base_dimen_50"
            android:layout_marginRight="@dimen/base_dimen_50"
            android:background="@color/charm_home_lock_line_gray" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/base_dimen_50"
            android:paddingBottom="@dimen/base_dimen_28"
            android:paddingTop="@dimen/base_dimen_28"
            android:text="@string/charmHome_lock_device_finger"
            android:textColor="@color/charm_home_lock_scanning_txt" />

        <TextView
            android:id="@+id/tx_lock_device_fingerprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/base_dimen_50"
            android:paddingBottom="@dimen/base_dimen_28"
            android:paddingTop="@dimen/base_dimen_28"
            android:text="3"
            android:textColor="@color/charm_home_lock_gray_tx" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_dimen_2"
            android:layout_below="@+id/tx_lock_device_fingerprint"
            android:layout_marginLeft="@dimen/base_dimen_50"
            android:layout_marginRight="@dimen/base_dimen_50"
            android:background="@color/charm_home_lock_line_gray" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/base_dimen_50"
            android:paddingBottom="@dimen/base_dimen_28"
            android:paddingTop="@dimen/base_dimen_28"
            android:text="@string/charmHome_lock_device_remaining_finger"
            android:textColor="@color/charm_home_lock_scanning_txt" />

        <TextView
            android:id="@+id/tx_lock_device_remaining_finger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/base_dimen_50"
            android:paddingBottom="@dimen/base_dimen_28"
            android:paddingTop="@dimen/base_dimen_28"
            android:text="77"
            android:textColor="@color/charm_home_lock_gray_tx" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_dimen_2"
            android:layout_below="@+id/tx_lock_device_remaining_finger"
            android:layout_marginLeft="@dimen/base_dimen_50"
            android:layout_marginRight="@dimen/base_dimen_50"
            android:background="@color/charm_home_lock_line_gray" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/base_dimen_50"
            android:paddingBottom="@dimen/base_dimen_28"
            android:paddingTop="@dimen/base_dimen_28"
            android:text="@string/charmHome_lock_device_rlectricity"
            android:textColor="@color/charm_home_lock_scanning_txt" />

        <TextView
            android:id="@+id/tx_lock_dian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/base_dimen_50"
            android:paddingBottom="@dimen/base_dimen_28"
            android:paddingTop="@dimen/base_dimen_28"
            android:text="正常"
            android:textColor="@color/charm_home_lock_gray_tx" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_dimen_100"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tx_lock_device_version_up"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/charmHome_lock_device_firmware"
                android:textColor="@color/charm_home_title"
                android:visibility="gone" />

            <TextView
                android:layout_width="@dimen/base_dimen_1"
                android:layout_height="match_parent"
                android:background="@color/charm_home_lock_line_gray"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tx_lock_device_logout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/charmHome_lock_device_delete"
                android:textColor="@color/charm_home_title" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>